fix broken links

--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -5,5 +5,5 @@ content: |
   
   From 2016 to 2020, I was a PhD student sharing my time between Sorbonne Université (Paris, France) and Thales (Palaiseau, France).
   I obtained my PhD from Sorbonne Université in january 2020.
-  My PhD work was advised by [Gilles Muller]() (Inria), [Julien Sopena]() (Sorbonne Université), and [Daniel Gracia Pérez]() (Thales Research and Technology).
+  My PhD work was advised by [Gilles Muller](https://who.paris.inria.fr/Gilles.Muller/) (Inria), [Julien Sopena](http://julien.sopena.fr) (Sorbonne Université), and [Daniel Gracia Pérez](https://scholar.google.com/citations?user=zBvd7BsAAAAJ&hl=en) (Thales Research and Technology).
 
