--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,4 +1,4 @@
-- title: "G(IP)^2C\: Temporally Isolated Multiprocessor Real-Time IPC with Server-to-Server Invocations"
+- title: "G(IP)^2C: Temporally Isolated Multiprocessor Real-Time IPC with Server-to-Server Invocations"
   author: Cédric Courtaud, Björn B. Brandenburg
   booktitle: 29th IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS'2023) ** Best Paper Award **
   year: 2023
