--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,26 +1,26 @@
-- title: "G(IP)^2C: Temporally Isolated Multiprocessor Real-Time IPC with Server-to-Server Invocations"
+- title: "G(IP)^2C: Temporally isolated multiprocessor real-Time IPC with server-to-server invocations"
   author: Cédric Courtaud, Björn B. Brandenburg
-  booktitle: 29th IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS'2023)
+  booktitle: IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS)
   year: 2023
   type: conference
   award: Best Paper Award
 
 - title: Maximizing parallelism without exploding deadlines in a mixed criticality embedded system
   author: Antoine Blin, Cédric Courtaud, Julien Sopena, Julia Lawall, Gille Muller
-  booktitle: 28th Euromicro Conference on Real-Time Systems (ECRTS'2016)
+  booktitle: Euromicro Conference on Real-Time Systems (ECRTS)
   year: 2016
   type: conference
 
 - title: Understanding the memory consumption of the MiBench embedded benchmark
   author: Antoine Blin, Cédric Courtaud, Julien Sopena, Julia Lawall, Gille Muller
-  booktitle: International Conference on Networked Systems (Netys'2016)
+  booktitle: International Conference on Networked Systems (Netys)
   year: 2016
   type: conference
 
 
 - title: Improving Prediction Accuracy of Memory Interferences for Multicore Platforms
   author: Cédric Courtaud, Julien Sopena, Gilles Muller, Daniel Gracia Pérez
-  booktitle: 40th IEEE Real-Time Systems Symposium (RTSS'2019)
+  booktitle: IEEE Real-Time Systems Symposium (RTSS)
   year: 2019
   type: conference
 
@@ -33,5 +33,5 @@
 - title: Caractérisation de la sensibilité aux interférences mémoire dans les systèmes temps-réels embarqués sur des plateformes multi-coeurs
   author: Cédric Courtaud
   year: 2020
-  school: Sorbonne Universites, UPMC University of Paris 6
+  school: Sorbonne Universités, UPMC University of Paris 6
   type: phdthesis
